fixing issue with nav bar spacing

--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -174,7 +174,6 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    width: 36%;
     font-family: Futura, "Trebuchet MS", Arial, sans-serif;
 }
 
